force-app/main/default/objects/Reva_Hostel_Request__c/Reva_Hostel_Request__c.object-meta.xml
<CustomObject>
    <label>REVA Hostel Request</label>
    <nameField>
        <displayFormat>RHR-{0000000}</displayFormat>
        <label>REVA Hostel Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>REVA Hostel Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>