force-app/main/default/objects/Reva_Hostel_Request__c/fields/Approved_by_ChiefWarden__c.field-meta.xml
<CustomField>
    <fullName>Approved_by_ChiefWarden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved by Chief Warden</label>
    <type>Checkbox</type>
</CustomField>