force-app/main/default/objects/Reva_Hostel_Request__c/fields/Block__c.field-meta.xml
<CustomField>
    <fullName>Block__c</fullName>
    <formula>TEXT(Reva_Hostel_Room__r.Block__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Block</label>
    <type>Text</type>
</CustomField>