force-app/main/default/objects/Reva_Hostel_Request__c/fields/ChiefWarden__c.field-meta.xml
<CustomField>
    <fullName>ChiefWarden__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chief Warden</label>
    <referenceTo>User</referenceTo>
    <relationshipName>REVA_Hostel_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>