force-app/main/default/objects/Reva_Hostel_Request__c/fields/Hostel_Room_Request_For__c.field-meta.xml
<CustomField>
    <fullName>Hostel_Room_Request_For__c</fullName>
    <label>Hostel Room Request For</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Reva_Hostel_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>