force-app/main/default/objects/Reva_Hostel_Request__c/fields/Id_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Id_Card_Number__c</fullName>
    <label>Id Card Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>