force-app/main/default/objects/Reva_Hostel_Request__c/fields/Rejoiner__c.field-meta.xml
<CustomField>
    <fullName>Rejoiner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rejoiner</label>
    <type>Checkbox</type>
</CustomField>