force-app/main/default/objects/Reva_Hostel_Request__c/fields/Reva_Hostel_JoiningDate__c.field-meta.xml
<CustomField>
    <fullName>Reva_Hostel_JoiningDate__c</fullName>
    <label>REVA Hostel Joining Date</label>
    <type>Date</type>
</CustomField>