force-app/main/default/objects/Reva_Hostel_Request__c/fields/Reva_Hostel_Premium_Room__c.field-meta.xml
<CustomField>
    <fullName>Reva_Hostel_Premium_Room__c</fullName>
    <defaultValue>false</defaultValue>
    <label>REVA Hostel Premium Room</label>
    <type>Checkbox</type>
</CustomField>