force-app/main/default/objects/Reva_Hostel_Request__c/fields/Reva_Hostel_Room__c.field-meta.xml
<CustomField>
    <fullName>Reva_Hostel_Room__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>REVA Hostel Room</label>
    <referenceTo>Reva_Hostel_Room__c</referenceTo>
    <relationshipLabel>REVA Hostel Requests</relationshipLabel>
    <relationshipName>Reva_Hostel_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>