force-app/main/default/objects/Reva_Hostel_Request__c/fields/RevaHostelVacatingDate__c.field-meta.xml
<CustomField>
    <fullName>RevaHostelVacatingDate__c</fullName>
    <label>REVA Hostel Vacating Date</label>
    <type>Date</type>
</CustomField>