force-app/main/default/objects/Reva_Hostel_Request__c/fields/RH_Payment_Choice__c.field-meta.xml
<CustomField>
    <fullName>RH_Payment_Choice__c</fullName>
    <label>Payment Choice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Payment</fullName>
            </value>
            <value>
                <fullName>Partial Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>