force-app/main/default/objects/Reva_Hostel_Request__c/fields/RH_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>RH_Payment_Status__c</fullName>
    <label>RH Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>