force-app/main/default/objects/Reva_Hostel_Request__c/fields/RH_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>RH_Payment_Type__c</fullName>
    <label>RH Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online/InternetBanking</fullName>
            </value>
            <value>
                <fullName>Credit Card/Debit Card</fullName>
            </value>
            <value>
                <fullName>UPI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>