force-app/main/default/objects/Reva_Hostel_Request__c/fields/RH_Student_Payment__c.field-meta.xml
<CustomField>
    <fullName>RH_Student_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student  Payment</label>
    <referenceTo>Student_Payment__c</referenceTo>
    <relationshipName>Reva_Hostel_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>