force-app/main/default/objects/Reva_Hostel_Request__c/fields/Room_Number__c.field-meta.xml
<CustomField>
    <fullName>Room_Number__c</fullName>
    <formula>Reva_Hostel_Room__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Room Number</label>
    <type>Text</type>
</CustomField>