force-app/main/default/objects/Reva_Hostel_Request__c/fields/Room_Request_for_Name__c.field-meta.xml
<CustomField>
    <fullName>Room_Request_for_Name__c</fullName>
    <formula>Hostel_Room_Request_For__r.FirstName+&apos; &apos;+Hostel_Room_Request_For__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Room Request for Name</label>
    <type>Text</type>
</CustomField>