force-app/main/default/objects/Reva_Hostel_Request__c/fields/Room_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Room_Request_Type__c</fullName>
    <formula>Hostel_Room_Request_For__r.Record_Type_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Room Request Type</label>
    <type>Text</type>
</CustomField>