force-app/main/default/objects/Reva_Hostel_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Room Allotted</fullName>
            </value>
            <value>
                <fullName>Request Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Vacating Initiated</fullName>
            </value>
            <value>
                <fullName>Vacated</fullName>
            </value>
            <value>
                <fullName>Rejoin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>