force-app/main/default/objects/Reva_Hostel_Request__c/fields/Student_Fee__c.field-meta.xml
<CustomField>
    <fullName>Student_Fee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student Fee</label>
    <referenceTo>Student_Fee__c</referenceTo>
    <relationshipName>Reva_Hostel_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>