force-app/main/default/objects/Reva_Hostel_Request__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>Occupancy Type - Sharing Type
(1-Sharing, 2-Sharing etc.)</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Single Sharing</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2 - Sharing</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3 - Sharing</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4 - Sharing</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>6 - Sharing</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>8 - Sharing</label>
            </value>
            <value>
                <fullName>4ExtraSpace</fullName>
                <label>4 - Sharing Extra Space</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>