force-app/main/default/objects/Reva_Hostel_Request__c/fields/Vacating_Request__c.field-meta.xml
<CustomField>
    <fullName>Vacating_Request__c</fullName>
    <label>Vacating Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vacating Initiated</fullName>
            </value>
            <value>
                <fullName>Request to warden</fullName>
            </value>
            <value>
                <fullName>Request to Chief Warden</fullName>
            </value>
            <value>
                <fullName>Request to Admin</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Vacated</fullName>
                <isActive>false</isActive>
                <label>Vacated</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>