force-app/main/default/objects/Reva_Hostel_Request__c/validationRules/Disable_Joining_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Disable_Joining_Date</fullName>
    <active>false</active>
    <description>Joining Date can be entered once status is booked only</description>
    <errorConditionFormula>OR(
    AND(
        ISPICKVAL(Status__c, &quot;Booked&quot;),
        ISBLANK(Reva_Hostel_JoiningDate__c)
    ),
    AND(
        NOT(ISPICKVAL(Status__c, &quot;Booked&quot;)),
        NOT(ISBLANK(Reva_Hostel_JoiningDate__c))
    )
)</errorConditionFormula>
    <errorMessage>Joining Date must be filled when the amount is paid</errorMessage>
</ValidationRule>