force-app/main/default/objects/Reva_Hostel_Request__c/validationRules/REVA_Hostel_Joining_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>REVA_Hostel_Joining_Date_Validation</fullName>
    <active>false</active>
    <description>Joining Date should not be prior than the current Date</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(Reva_Hostel_JoiningDate__c)),
Reva_Hostel_JoiningDate__c &lt; TODAY()
)</errorConditionFormula>
    <errorDisplayField>Reva_Hostel_JoiningDate__c</errorDisplayField>
    <errorMessage>Joining Date should not be prior than the current Date</errorMessage>
</ValidationRule>