force-app/main/default/objects/Reva_Hostel_Request__c/validationRules/REVA_Hostel_Vacating_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>REVA_Hostel_Vacating_Date_Validation</fullName>
    <active>true</active>
    <description>Hostel Vacating Date should not be Earlier than the Joining date and Current Date</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(RevaHostelVacatingDate__c)),
RevaHostelVacatingDate__c &lt; TODAY()
)</errorConditionFormula>
    <errorMessage>Hostel Vacating Date should not be Earlier than the Joining date and Current Date</errorMessage>
</ValidationRule>